= Asciidoctor Tabs Changelog
:url-repo: https://github.com/asciidoctor/asciidoctor-tabs

This document provides a curated view of the changes to Asciidoctor Tabs per release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

=== Added

* Define exports for behavior (tabs.js) and style (tabs.css) in npm package

=== Changed

* Add aliases for `Block` and `Docinfo` classes to `Extensions` class; remove workaround in js module
* Move `margin-bottom` style to tabset element
* Move behavior (tabs.js) and style (tabs.css) to dist folder in npm package

=== Fixed

* Increase specificity of sibling selector for tab to work with Antora default UI

== 1.0.0-alpha.3 (2022-10-05) - @mojavelinux

=== Added

* Provide fallback behavior for non-HTML backends (filetype is not html) (#4)
* Support multiple tab labels (terms) for the same content (description) (#8)
* Allow alternate stylesheet for tabs to be specified using `tabs-stylesheet` attribute (#6)

=== Changed

* Assign ID directly to tab (list item) node (instead of using inline anchor) if backend supports it (#11)

=== Fixed

* Create empty pane instead of crashing if dlist item has term only / no description

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.3[git tag] | {url-repo}/compare/v1.0.0-alpha.2\...v1.0.0-alpha.3[full diff]

== 1.0.0-alpha.2 (2022-10-03) - @mojavelinux

=== Added

* Transpile `Asciidoctor::Tabs::Extensions` class for npm package

=== Changed

* Rename `idx-tabset` counter to `tabset-number` to be consistent with built-in counter names
* Don't register docinfo extensions if converter is producing embedded output
* Update `register` and `unregister` on `Asciidoctor::Tabs::Extensions` to accept a registry argument
* Delegate registration of extension in npm package to `Asciidoctor::Tabs::Extensions.register` method